# calculadora-nutricional

./: README.md  pyproject.toml
calculadora_nutricional/: get.py  imc.py  main.py  tmb.py  tmb_validator.py
tests/: get_test.py  tmb_test.py
