[tool.poetry]
name = "calculadora-nutricional"
version = "0.1.0"
description = ""
authors = ["Giovanny Cordeiro <Giovannycordeiropb@gmail.com>"]
readme = "README.md"
packages = [{include = "calculadora_nutricional"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
