[tool.poetry]
name = "calculadora-nutricional"
version = "0.1.0"
description = ""
authors = ["Giovanny Cordeiro <Giovannycordeiropb@gmail.com>"]
readme = "README.md"
packages = [{include = "calculadora_nutricional"}]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"

[tool.taskipy.tasks]
run = "python -m calculadora_nutricional.main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
