[tool.poetry]
name = "calculadora-nutricional"
version = "0.1.0"
description = ""
authors = ["Giovanny Cordeiro <Giovannycordeiropb@gmail.com>"]
readme = "README.md"
packages = [{include = "calculadora_nutricional"}]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"
ruff = "^0.11.10"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT', 'FAST']

[tool.ruff.format]
preview = true
quote-style = 'double'

[tool.taskipy.tasks]
run = "python -m calculadora_nutricional.main"
lint = "ruff check . --fix"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
